Attempt to create through table connection. Confirm or deny success in next commit.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -28,7 +28,7 @@ input[type="password"],
 input[type="email"] {
   margin: 0 auto;
   margin-bottom: 15px;
-  width: 100px;
+  width: 330px;
   height: 33px;
   line-height: 33px;
   border-radius: 33px;
@@ -39,6 +39,7 @@ input[type="email"] {
   display: inline-block;
   font-family: 'Quicksand', sans-serif;
   font-size: 1em;
+  background-color: transparent;
 }
 .button {
   margin: 0 auto;
@@ -68,7 +69,8 @@ button {
   display: inline-block;
   font-family: 'Quicksand', sans-serif;
   font-size: 1em;
-  background-color: white;
+  background-color: transparent;
+  cursor: pointer;
 }
 .eng-container {
   visibility: visible;
