--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -34,7 +34,7 @@ input[type="password"],
 input[type="email"] {
   margin: 0 auto;
   margin-bottom: 15px;
-  width: 100px;
+  width: 330px;
   height: 33px;
   line-height: 33px; // aligns vertically
   border-radius: 33px;
@@ -45,6 +45,7 @@ input[type="email"] {
   display: inline-block;
   font-family: 'Quicksand', sans-serif;
   font-size: 1em;
+  background-color: transparent;
 }
 
 .button {
@@ -76,7 +77,9 @@ button {
   display: inline-block;
   font-family: 'Quicksand', sans-serif;
   font-size: 1em;
-  background-color: white;
+  background-color: transparent;
+  cursor: pointer;
+
 }
 
 .eng-container {
