--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -48,7 +48,7 @@ input[type="email"] {
   background-color: transparent;
 }
 
-.button {
+.langButton {
 	margin: 0 auto;
 	margin-bottom: 15px;
 	width: 100px;
@@ -90,11 +90,6 @@ button {
 	visibility: hidden;
 }
 
-#vocabList {
-  background-color: @yellow;
-  width: 300px;
-  height: 300px;
-}
 
 .container {
   overflow: hidden;  
