Create AJAX call for reading pages to grab vocabs

--- a/app/views/adminvocab.erb
+++ b/app/views/adminvocab.erb
@@ -17,3 +17,6 @@
   <button>create vocab</button>
   
 </form>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="/js/background.js"></script>
+  <script src="/js/main.js"></script>
