--- a/app/views/go.erb
+++ b/app/views/go.erb
@@ -8,3 +8,7 @@
 
 <%=@reading_list%>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="/js/background.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/gengo.js"></script>
