--- a/app/views/reading.erb
+++ b/app/views/reading.erb
@@ -1,4 +1,11 @@
 <h2>Results Page</h2>
 
+<p id="myId"><%= @reading["id"] %></p>
 <p><%= @reading["content"] %></p>
 <p><%=@vocab_list%></p>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="/js/background.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/genreading.js"></script>
+
