--- a/app/views/adminreading.erb
+++ b/app/views/adminreading.erb
@@ -21,3 +21,6 @@
 
       <button>create reading</button>
    </form>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="/js/background.js"></script>
+  <script src="/js/main.js"></script>
