--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -24,5 +24,10 @@
     
     </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="/js/background.js"></script>
+  <script src="/js/main.js"></script>
+
+
 
 
