--- a/app/views/reading.erb
+++ b/app/views/reading.erb
@@ -1,7 +1,7 @@
 <h2>Results Page</h2>
 
 <p id="myId"><%= @reading["id"] %></p>
-<p><%= @reading["content"] %></p>
+<p id="reading-main"><%= @reading["content"] %></p>
 <p><%=@vocab_list%></p>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
