Vocab box populates but does not do anything yet. Also clicking vocabs does not do anything yet.

--- a/app/views/reading.erb
+++ b/app/views/reading.erb
@@ -2,7 +2,10 @@
 
 <p id="myId"><%= @reading["id"] %></p>
 <p id="reading-main"><%= @reading["content"] %></p>
-<p><%=@vocab_list%></p>
+<!-- <p><%=@vocab_list%></p>
+ -->
+
+<div id="vocab-box"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="/js/background.js"></script>
