Language selection now works in user creation. Not DRY.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -78,6 +78,9 @@ button {
 .jpn-container {
   visibility: hidden;
 }
+#nl {
+  display: none;
+}
 #reading-main {
   margin: 15px;
   padding: 5px;
