--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -11,6 +11,7 @@
 
         <input type="email" name="email" placeholder="E-Mail" /><br />
 
+        <input type="text" name="nativeLanguage" id="nl" />
 
         <div class="langButton" id="eng">English</div>
         <div class="langButton">Deutsch</div>
