--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -1,9 +1,10 @@
+@charset "utf-8";
 html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
 }
-
+ 
 h1 {
   font-size: 4em;
   margin: 0;
