--- a/app/views/reading.erb
+++ b/app/views/reading.erb
@@ -3,7 +3,12 @@
 <p id="myId"><%= @reading["id"] %></p>
 <p id="myLang"><%= @reading["language"] %></p>
 <p id="reading-main"><%= @reading["content"] %></p>
+        
+        <div class="langButton" id="eng">English</div>
+        <div class="langButton" id="ger">Deutsch</div>
+        <div class="langButton" id="jpn">日本語</div>
 <div id="vocab-box"><h2>Click a vocab to get more info!</h2><ul></ul></div>
+<p id="nl"><%= @nl %></p>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="/js/background.js"></script>
