Vocab box styling. Not finished yet.

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -14,7 +14,7 @@
         <input type="text" name="native_language" id="nl" />
 
         <div class="langButton" id="eng">English</div>
-        <div class="langButton">Deutsch</div>
+        <div class="langButton" id="ger">Deutsch</div>
         <div class="langButton" id="jpn">日本語</div>
 
         <br/>
