--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -127,6 +127,7 @@ button {
   }
 }
 
+/* make this have the bottom border extend until the next selector */
 .vocabButton:after {
   border-bottom: 1px solid pink;
   width: 100px;
