Vocab box has language specific instructions and better handling of kanji and furigana.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -106,6 +106,7 @@ button {
   width: 343px;
   overflow: scroll;
   margin: 0 auto;
+  margin-bottom: 20px;
   font-weight: 700;
 }
 #vocab-box p {
