--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -4,7 +4,7 @@ html, body {
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
 }
- 
+  
 h1 {
   font-size: 4em;
   margin: 0;
@@ -121,6 +121,7 @@ button {
   width: 343px;
   overflow: scroll;
   margin: 0 auto;
+  margin-bottom: 20px;
   font-weight: 700;
   p {
     margin: 0;
