--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,8 +3,11 @@
 <head>
   <title>thenkyou</title>
   <meta charset = "utf-8" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="/../css/style.css" />
+
 </head>
 
 <body>
