--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -110,6 +110,14 @@ button {
   display: none;
 }
 
+#myId {
+  display: none;
+}
+
+#myLang {
+  display: none;
+}
+
 #reading-main {
   margin: 15px;
   padding: 5px;
@@ -126,6 +134,11 @@ button {
   p {
     margin: 0;
   }
+}
+
+.welcome {
+  font-weight: 700;
+  cursor: pointer;
 }
 
 /* make this have the bottom border extend until the next selector */
