--- a/app/views/reading.erb
+++ b/app/views/reading.erb
@@ -1,4 +1,4 @@
-<h2>Results Page</h2>
+<h2><%= @reading["title"] %></h2>
 
 <p id="myId"><%= @reading["id"] %></p>
 <p id="myLang"><%= @reading["language"] %></p>
