--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -2,25 +2,7 @@
 
     <p> thenkyou is a tool to help you learn slang in a foreign language. Read selections with colloquial terms used in a conversational context, and click on the term to get more information about it. thenkyou is currently available in <span class="welcome" id="eng">English</span>, <span class="welcome" id="ger">Deutsch</span>, and <span class="welcome" id="jpn">日本語</span>! Here are some examples:</p>
 
-    <div class="center">
-    <%= @signup_message %>
-      <form method="post" action="/">
-        <input type="text" name="username" placeholder="Username" /><br />
-
-        <input type="password" name="password" placeholder="Password" /><br />
-
-        <input type="email" name="email" placeholder="E-Mail" /><br />
-
-        <input type="text" name="native_language" id="nl" />
-
-        <div class="langButton" id="eng">English</div>
-        <div class="langButton" id="ger">Deutsch</div>
-        <div class="langButton" id="jpn">日本語</div>
-
-        <br/>
-        <button>Log in</button>  
-      </form>
-    </div>
+    <ul></ul>
 
     <div class="center">
     <%= @login_message %>
@@ -36,6 +18,7 @@
 
   <script src="/js/background.js"></script>
   <script src="/js/main.js"></script>
+  <script src="/js/genhome.js"></script>
 
 
 
