--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,8 +12,8 @@
 
 <body>
   <div class="container">
-  <a href = "/logout">log out</a>
-    <%= yield %>
+<!--   <a href = "/logout">log out</a>
+ -->    <%= yield %>
   </div>
 
 
