--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -3,18 +3,32 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
+  // background-color: @white;
 }
-  
+
 h1 {
   font-size: 4em;
   margin: 0;
+  color: @black;
+  text-align: center;
 }
 
-h1, h2 {
+h2 {
 	text-align: center;
+  font-size: 2.5em;
+  color: @black;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+p {
+  color: @black;
 }
 
 a {
+  color: @blue;
 	text-decoration: none;
 }
 
@@ -28,6 +42,26 @@ img {
 	// max-height: 150px;
 	// max-width: 150px;
 	z-index: -1;
+}
+
+ul {
+  background-color: transparent; 
+}
+
+li {
+  margin: 5px;
+  height: 50px;
+  line-height: 50px; // aligns vertically
+  border-radius: 33px;
+  text-align: center;
+  padding: 5px;
+  border: 1px solid;
+  font-weight: 700;
+  display: inline-block;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1em;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 input[type="text"],
@@ -131,6 +165,7 @@ button {
   margin: 0 auto;
   margin-bottom: 20px;
   font-weight: 700;
+  background-color: white;
   p {
     margin: 0;
   }
