--- a/app/views/go.erb
+++ b/app/views/go.erb
@@ -1,7 +1,7 @@
 <h2>Go</h2>
-<p><%= @username %></p>
-<ul></ul>
+<!-- <p><%= @username %></p>
+ --><div class="button_container"></div>
 
   <script src="/js/background.js"></script>
-  <script src="/js/main.js"></script>
   <script src="/js/gengo.js"></script>
+  <script src="/js/main.js"></script>
