--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -2,7 +2,7 @@
 
     <p> thenkyou is a tool to help you learn slang in a foreign language. Read selections with colloquial terms used in a conversational context, and click on the term to get more information about it. thenkyou is currently available in <span class="welcome" id="eng">English</span>, <span class="welcome" id="ger">Deutsch</span>, and <span class="welcome" id="jpn">日本語</span>! Here are some examples:</p>
 
-    <ul></ul>
+    <div class="button_container"></div>
 
     <div class="center">
     <%= @login_message %>
