--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -24,14 +24,26 @@ p {
 }
 a {
   text-decoration: none;
-}
-.vocab {
   color: #52BFFF;
-  font-weight: 700;
-  cursor: pointer;
+}
+a {
+  color: #E2B4F9;
 }
 img {
   z-index: -1;
+}
+.floatL {
+  max-width: 50%;
+  float: left;
+  margin: 1% 1% 1% 3%;
+}
+.floatR {
+  max-width: 40%;
+  float: right;
+  margin: 5% 3% 1% 1%;
+}
+.reading_button {
+  margin: 0 auto;
 }
 .reading_button {
   margin: 5px;
@@ -47,16 +59,13 @@ img {
   background-color: pink;
   cursor: pointer;
   color: #202020;
-  opacity: 50%;
 }
-input[type="text"],
-input[type="password"],
-input[type="email"] {
+.login_button {
   margin: 0 auto;
   margin-bottom: 15px;
-  width: 330px;
-  height: 33px;
-  line-height: 33px;
+  width: 110px;
+  height: 22px;
+  line-height: 11px;
   border-radius: 33px;
   text-align: center;
   padding: 5px;
@@ -64,7 +73,25 @@ input[type="email"] {
   font-weight: 700;
   display: inline-block;
   font-family: 'Quicksand', sans-serif;
-  font-size: 1em;
+  font-size: .75em;
+  background-color: transparent;
+}
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  margin: 0 auto;
+  margin-bottom: 15px;
+  width: 220px;
+  height: 22px;
+  line-height: 22px;
+  border-radius: 33px;
+  text-align: center;
+  padding: 5px;
+  border: 1px solid;
+  font-weight: 700;
+  display: inline-block;
+  font-family: 'Quicksand', sans-serif;
+  font-size: .75em;
   background-color: transparent;
 }
 .langButton {
@@ -149,14 +176,19 @@ button {
   cursor: pointer;
 }
 /* make this have the bottom border extend until the next selector */
-.vocabButton:after {
-  border-bottom: 1px solid pink;
-  width: 100px;
-}
-.container {
-  overflow: hidden;
-}
 .center {
   margin: 0 auto;
   text-align: center;
+}
+.info {
+  margin: 0 auto;
+  text-align: right;
+  background-image: radial-gradient(#ffffff, rgba(255, 255, 255, 0.25));
+  padding: 5px;
+  border-radius: 15%;
+}
+.vocab {
+  color: #52BFFF;
+  font-weight: 700;
+  cursor: pointer;
 }
