--- a/app/views/go.erb
+++ b/app/views/go.erb
@@ -1,7 +1,8 @@
-<h2>Go</h2>
-<!-- <p><%= @username %></p>
- --><div class="button_container"></div>
+<h2>Go!</h2>
 
+<div class="center">
+  <div class="button_container"></div>
+</div>
   <script src="/js/background.js"></script>
   <script src="/js/gengo.js"></script>
   <script src="/js/main.js"></script>
