Small changes to text content.

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -4,7 +4,7 @@
   
   <div class="floatL"> 
     <div class="info">
-      <p> <strong>thenkyou</strong> is a tool to help you learn slang in a foreign language. Read selections with colloquial terms used in a conversational context, and click on the term to get more information about it. <strong>thenkyou</strong> is currently available in <span class="welcome" id="eng">English</span>, <span class="welcome" id="ger">Deutsch</span>, and <span class="welcome" id="jpn">日本語</span>! Here are some examples:</p>
+      <p> <strong>thenkyou</strong> is a tool for learning slang in a foreign language. Users can read passages of colloquial conversation, and click on target words for further definitions and usage examples. <strong>thenkyou</strong> is currently available in <span class="welcome" id="eng">English</span>, <span class="welcome" id="ger">Deutsch</span>, and <span class="welcome" id="jpn">日本語</span>! Log in for full access, or check out are some examples here:</p>
     </div>
     <div class="center">
       <div class="button_container"></div>
