--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -3,7 +3,6 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
-  // background-color: @white;
 }
 
 h1 {
@@ -39,13 +38,8 @@ a {
 }
 
 img {
-	// max-height: 150px;
-	// max-width: 150px;
 	z-index: -1;
 }
-// .container {
-//   margin: 0 auto;
-// }
 
 .floatL {
   max-width: 50%;
@@ -61,19 +55,15 @@ img {
   margin-right: 10%;
 }
 
-// .containerC {
-//   flex-direction: column;
-//   flex-grow: 1;
-// }
-
 .reading_button {
   margin: 0 auto;
 }
 
+
 .reading_button {
   margin: 5px;
   height: 50px;
-  line-height: 50px; // aligns vertically
+  line-height: 50px;
   border-radius: 33px;
   text-align: center;
   padding: 5px 15px;
@@ -91,7 +81,7 @@ img {
   margin-bottom: 15px;
   width: 110px;
   height: 22px;
-  line-height: 11px; // aligns vertically
+  line-height: 11px;
   border-radius: 33px;
   text-align: center;
   padding: 5px;
@@ -110,7 +100,7 @@ input[type="email"] {
   margin-bottom: 15px;
   width: 220px;
   height: 22px;
-  line-height: 22px; // aligns vertically
+  line-height: 22px;
   border-radius: 33px;
   text-align: center;
   padding: 5px;
@@ -127,7 +117,7 @@ input[type="email"] {
 	margin-bottom: 15px;
 	width: 100px;
 	height: 33px;
-	line-height: 33px; // aligns vertically
+	line-height: 33px;
 	border-radius: 33px;
 	text-align: center;
 	padding: 5px;
@@ -141,7 +131,7 @@ input[type="email"] {
   margin: 0;
   width: 100px;
   height: 33px;
-  line-height: 33px; // aligns vertically
+  line-height: 33px;
   text-align: center;
   padding: 5px;
   border-top: 1px solid;
@@ -158,7 +148,7 @@ button {
   margin-bottom: 15px;
   width: 100px;
   height: 50px;
-  line-height: 33px; // aligns vertically
+  line-height: 33px;
   border-radius: 33px;
   text-align: center;
   padding: 5px;
@@ -202,7 +192,6 @@ button {
   background-image: radial-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
   padding: 20px;
   border-radius: 15%;
-  // font-weight: 100;
   line-height: 32px;
   font-size: 20px;
   font-weight: 400;
