--- a/app/public/less/lessSpecs/grid.less
+++ b/app/public/less/lessSpecs/grid.less
@@ -140,7 +140,7 @@ input[type="email"] {
   font-weight: 700;
   display: inline-block;
   cursor: pointer;
-  background-color: white;
+  // background-color: white;
 }
 
 button {
